--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 .classpath
 .project
 .settings/
+.factorypath
 target/
 bin/
 test-output/
@@ -14,49 +15,3 @@ test-output/
 *.ipr
 *.iws
 .idea/
-.eggs/
-build/
-dist/
-scrapy_item.egg-info/
-venv/
-
-# Compiled source #
-###################
-*.com
-*.class
-*.dll
-*.exe
-*.o
-*.so
-
-# Packages #
-############
-# it's better to unpack these files and commit the raw source
-# git has its own built in compression methods
-*.7z
-*.dmg
-*.gz
-*.iso
-*.jar
-*.rar
-*.tar
-*.zip
-*.war
-*.ear
-
-
-
-# Logs and databases #
-######################
-*.log
-*.sql
-*.sqlite
-
-# OS generated files #
-######################
-.DS_Store?
-ehthumbs.db
-Icon?
-Thumbs.db
-*/overlays
-*~
